# IBBI-SW-Developer

./: README.md  docker-compose.yml
Backend/: Dockerfile  README.md  pyproject.toml
Backend/backend/: database.py  depends.py  main.py  models.py
Backend/backend/routes/: User_router.py
Backend/backend/schemas/: User.py
Backend/backend/use_case/: case_user.py
Frontend/: Dockerfile  angular.json  package-lock.json  package.json
Frontend/src/: styles.css
Frontend/src/app/: app.component.ts  app.routes.ts
Frontend/src/app/guard/: auth.guard.ts
Frontend/src/app/pages/dashboard/: dashboard.component.ts
Frontend/src/app/pages/layout/: layout.component.html
Frontend/src/app/pages/login/: login.component.css  login.component.html  login.component.ts
